--- a/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
+++ b/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
@@ -81,17 +81,6 @@
                     <textarea rows="5" type="text" class="form-control" name="description" id="field_description"
                               [(ngModel)]="degaUser.description" ></textarea>
                 </div>
-                <!--<div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.slug" for="field_slug">Slug</label>
-                    <input type="text" class="form-control" name="slug" id="field_slug"
-                        [(ngModel)]="degaUser.slug" required/>
-                    <div [hidden]="!(editForm.controls.slug?.dirty && editForm.controls.slug?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.slug?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
-                    </div>
-                </div>-->
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.enabled" for="field_enabled">Enabled</label>
                     <input type="checkbox" class="form-control" name="enabled" id="field_enabled"
@@ -123,24 +112,6 @@
                         </small>
                     </div>
                 </div>
-               <!-- <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.createdDate" for="field_createdDate">Created Date</label>
-                    <div class="d-flex">
-                        <input id="field_createdDate" type="datetime-local" class="form-control" name="createdDate" [(ngModel)]="createdDate"
-                        required/>
-                    </div>
-                    <div [hidden]="!(editForm.controls.createdDate?.dirty && editForm.controls.createdDate?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.createdDate?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
-                        <small class="form-text text-danger"
-                            [hidden]="!editForm.controls.createdDate?.errors?.ZonedDateTimelocal" jhiTranslate="entity.validation.ZonedDateTimelocal">
-                            This field should be a date and time.
-                        </small>
-                    </div>
-                </div>-->
-
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreDegaUser.role" for="field_role">Role</label>
                     <select class="form-control" id="field_role" name="role" [(ngModel)]="degaUser.roleId"  required>
@@ -189,6 +160,18 @@
                 <div [hidden]="!(editForm.controls.organizationCurrent?.dirty && editForm.controls.organizationCurrent?.invalid)">
                     <small class="form-text text-danger"
                         [hidden]="!editForm.controls.organizationCurrent?.errors?.required" jhiTranslate="entity.validation.required">
+                        This field is required.
+                    </small>
+                </div>
+                <div class="form-group">
+                    <label jhiTranslate="gatewayApp.coreDegaUser.roleMapping" for="field_roleMapping">Role Mapping</label>
+                    <select class="form-control" id="field_roleMapping" multiple name="roleMapping" [(ngModel)]="degaUser.roleMappings" required>
+                        <option [ngValue]="getSelected(degaUser.roleMappings, roleMappingOption)" *ngFor="let roleMappingOption of rolemappings; trackBy: trackRoleMappingById">{{roleMappingOption.name}}</option>
+                    </select>
+                </div>
+                <div [hidden]="!(editForm.controls.roleMapping?.dirty && editForm.controls.roleMapping?.invalid)">
+                    <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.roleMapping?.errors?.required" jhiTranslate="entity.validation.required">
                         This field is required.
                     </small>
                 </div>
