--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -1,70 +1,78 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
-            <h2 id="jhi-post-heading" jhiTranslate="gatewayApp.corePost.home.createOrEditLabel">Create or edit a Post</h2>
+            <h2 id="jhi-post-heading" jhiTranslate="gatewayApp.corePost.home.createOrEditLabel">Create or edit a
+                Post</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
                 <div class="form-group" [hidden]="!post.id">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
                     <input type="text" class="form-control" id="id" name="id"
-                        [(ngModel)]="post.id" readonly />
+                           [(ngModel)]="post.id" readonly/>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.corePost.title" for="field_title">Title</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.corePost.title"
+                           for="field_title">Title</label>
                     <input type="text" class="form-control" name="title" id="field_title"
-                        [(ngModel)]="post.title" required/>
+                           [(ngModel)]="post.title" required/>
                     <div [hidden]="!(editForm.controls.title?.dirty && editForm.controls.title?.invalid)">
                         <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.title?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
+                               [hidden]="!editForm.controls.title?.errors?.required"
+                               jhiTranslate="entity.validation.required">
+                            This field is required.
                         </small>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.corePost.subTitle" for="field_subTitle">Sub Title</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.corePost.subTitle" for="field_subTitle">Sub
+                        Title</label>
                     <input type="text" class="form-control" name="subTitle" id="field_subTitle"
-                        [(ngModel)]="post.subTitle" />
+                           [(ngModel)]="post.subTitle"/>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.content" for="field_content">Content</label>
                     <span class="text-danger" [hidden]="post.content">*</span>
-                    <quill-editor [(ngModel)]="post.content" name="content" id="field_content" [style]="{height: '200px'}"
-                                  (onEditorCreated)="getEditorInstance($event)" required></quill-editor>
+                    <jhi-quill-editor [original_content]="post.content"
+                                      id="field_content"
+                                      (updated_content)="updatePostContentFormData($event)">
+                    </jhi-quill-editor>
                     <div [hidden]="!(editForm.controls.content?.dirty && editForm.controls.content?.invalid)">
                         <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.content?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
+                               [hidden]="!editForm.controls.content?.errors?.required"
+                               jhiTranslate="entity.validation.required">
+                            This field is required.
                         </small>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.excerpt" for="field_excerpt">Excerpt</label>
                     <textarea rows="5" type="text" class="form-control" name="excerpt" id="field_excerpt"
-                              [(ngModel)]="post.excerpt" ></textarea>
+                              [(ngModel)]="post.excerpt"></textarea>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.featured" for="field_featured">Featured</label>
                     <input type="checkbox" class="form-control" name="featured" id="field_featured"
-                        [(ngModel)]="post.featured" />
+                           [(ngModel)]="post.featured"/>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.sticky" for="field_sticky">Sticky</label>
                     <input type="checkbox" class="form-control" name="sticky" id="field_sticky"
-                        [(ngModel)]="post.sticky" />
+                           [(ngModel)]="post.sticky"/>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.updates" for="field_updates">Updates</label>
                     <input type="text" class="form-control" name="updates" id="field_updates"
-                        [(ngModel)]="post.updates" />
+                           [(ngModel)]="post.updates"/>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.corePost.featuredMedia" for="field_featuredMedia">Featured Media</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.corePost.featuredMedia"
+                           for="field_featuredMedia">Featured Media</label>
                     <button id="field_featuredMedia" class="btn btn-primary jh-create-entity create-media"
-                           [routerLink]="['/', { outlets: { popup: 'featured-media/upload'} }]"
+                            [routerLink]="['/', { outlets: { popup: 'featured-media/upload'} }]"
                             [queryParams]="{ media_type: 'feature'}"
                             replaceUrl="true" type="button">
                         <fa-icon [icon]="'plus'"></fa-icon>
-                        <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
+                        <span class="hidden-sm-down" jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
                             Upload Media
                         </span>
                     </button>
@@ -76,48 +84,66 @@
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.tag" for="field_tag">Tag</label>
                     <select class="form-control" id="field_tag" multiple name="tag" [(ngModel)]="post.tags">
-                        <option [ngValue]="getSelected(post.tags, tagOption)" *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.name}}</option>
+                        <option [ngValue]="getSelected(post.tags, tagOption)"
+                                *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.name}}
+                        </option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.category" for="field_category">Category</label>
-                    <select class="form-control" id="field_category" multiple name="category" [(ngModel)]="post.categories">
-                        <option [ngValue]="getSelected(post.categories, categoryOption)" *ngFor="let categoryOption of categories; trackBy: trackCategoryById">{{categoryOption.name}}</option>
+                    <select class="form-control" id="field_category" multiple name="category"
+                            [(ngModel)]="post.categories">
+                        <option [ngValue]="getSelected(post.categories, categoryOption)"
+                                *ngFor="let categoryOption of categories; trackBy: trackCategoryById">
+                            {{categoryOption.name}}
+                        </option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.format" for="field_format">Format</label>
-                    <select class="form-control" id="field_format" name="format" [(ngModel)]="post.formatId"  required>
-                        <option [ngValue]="formatOption.id" *ngFor="let formatOption of formats | orderBy:'name'; trackBy: trackFormatById">{{formatOption.name}}</option>
+                    <select class="form-control" id="field_format" name="format" [(ngModel)]="post.formatId" required>
+                        <option [ngValue]="formatOption.id"
+                                *ngFor="let formatOption of formats | orderBy:'name'; trackBy: trackFormatById">
+                            {{formatOption.name}}
+                        </option>
                     </select>
                 </div>
                 <div [hidden]="!(editForm.controls.format?.dirty && editForm.controls.format?.invalid)">
                     <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.format?.errors?.required" jhiTranslate="entity.validation.required">
+                           [hidden]="!editForm.controls.format?.errors?.required"
+                           jhiTranslate="entity.validation.required">
                         This field is required.
                     </small>
                 </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.degaUser" for="field_degaUser">Author</label>
-                    <select class="form-control" id="field_degaUser" multiple name="degaUser" [(ngModel)]="post.degaUsers" required>
-                        <option [ngValue]="getSelected(post.degaUsers, degaUserOption)" *ngFor="let degaUserOption of degausers; trackBy: trackDegaUserById">{{degaUserOption.displayName}}</option>
+                    <select class="form-control" id="field_degaUser" multiple name="degaUser"
+                            [(ngModel)]="post.degaUsers" required>
+                        <option [ngValue]="getSelected(post.degaUsers, degaUserOption)"
+                                *ngFor="let degaUserOption of degausers; trackBy: trackDegaUserById">
+                            {{degaUserOption.displayName}}
+                        </option>
                     </select>
                 </div>
                 <div [hidden]="!(editForm.controls.degaUser?.dirty && editForm.controls.degaUser?.invalid)">
                     <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.degaUser?.errors?.required" jhiTranslate="entity.validation.required">
+                           [hidden]="!editForm.controls.degaUser?.errors?.required"
+                           jhiTranslate="entity.validation.required">
                         This field is required.
                     </small>
                 </div>
             </div>
             <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
+                <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
                     <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                 </button>
-                <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary" *ngIf="showSave">
-                    <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.savedraft">Save Draft</span>
+                <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving"
+                        class="btn btn-primary" *ngIf="showSave">
+                    <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span
+                    jhiTranslate="entity.action.savedraft">Save Draft</span>
                 </button>
-                <button type="button" id="publish-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary" *ngIf="showPublish" (click)="publish()">
+                <button type="button" id="publish-entity" [disabled]="editForm.form.invalid || isSaving"
+                        class="btn btn-primary" *ngIf="showPublish" (click)="publish()">
                     <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.publish">Publish</span>
                 </button>
             </div>
