--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -1,33 +1,37 @@
-
 <div class="row justify-content-center">
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="saveOrPublish('Draft')" #editForm="ngForm">
-            <h2 id="jhi-factcheck-heading" jhiTranslate="gatewayApp.factcheckFactcheck.home.createOrEditLabel">Create or edit a Factcheck</h2>
+            <h2 id="jhi-factcheck-heading" jhiTranslate="gatewayApp.factcheckFactcheck.home.createOrEditLabel">Create or
+                edit a Factcheck</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
                 <div class="form-group" [hidden]="!factcheck.id">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
                     <input type="text" class="form-control" id="id" name="id"
-                           [(ngModel)]="factcheck.id" readonly />
+                           [(ngModel)]="factcheck.id" readonly/>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.title" for="field_title">Title</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.title"
+                           for="field_title">Title</label>
                     <input type="text" class="form-control" name="title" id="field_title"
                            [(ngModel)]="factcheck.title" required/>
                     <div [hidden]="!(editForm.controls.title?.dirty && editForm.controls.title?.invalid)">
                         <small class="form-text text-danger"
-                               [hidden]="!editForm.controls.title?.errors?.required" jhiTranslate="entity.validation.required">
+                               [hidden]="!editForm.controls.title?.errors?.required"
+                               jhiTranslate="entity.validation.required">
                             This field is required.
                         </small>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.subTitle" for="field_subTitle">Sub Title</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.subTitle"
+                           for="field_subTitle">Sub Title</label>
                     <input type="text" class="form-control" name="subTitle" id="field_subTitle"
-                           [(ngModel)]="factcheck.subTitle" />
+                           [(ngModel)]="factcheck.subTitle"/>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.introduction" for="field_introduction">Introduction</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.introduction"
+                           for="field_introduction">Introduction</label>
                     <span class="text-danger" [hidden]="factcheck.introduction">*</span>
                     <jhi-quill-editor [original_content]="factcheck.introduction"
                                       id="field_introduction"
@@ -35,12 +39,14 @@
                     </jhi-quill-editor>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.excerpt" for="field_excerpt">Excerpt</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.excerpt"
+                           for="field_excerpt">Excerpt</label>
                     <textarea rows="5" class="form-control" name="excerpt" id="field_excerpt"
-                              [(ngModel)]="factcheck.excerpt" ></textarea>
+                              [(ngModel)]="factcheck.excerpt"></textarea>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.summary" for="field_summary">Summary</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.summary"
+                           for="field_summary">Summary</label>
                     <span class="text-danger" [hidden]="factcheck.summary">*</span>
                     <jhi-quill-editor [original_content]="factcheck.summary"
                                       id="field_summary"
@@ -50,29 +56,33 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.featured" for="field_featured">Featured</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.featured"
+                           for="field_featured">Featured</label>
                     <input type="checkbox" class="form-control" name="featured" id="field_featured"
-                           [(ngModel)]="factcheck.featured" />
+                           [(ngModel)]="factcheck.featured"/>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.sticky" for="field_sticky">Sticky</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.sticky"
+                           for="field_sticky">Sticky</label>
                     <input type="checkbox" class="form-control" name="sticky" id="field_sticky"
-                           [(ngModel)]="factcheck.sticky" />
+                           [(ngModel)]="factcheck.sticky"/>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.updates" for="field_updates">Updates</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.updates"
+                           for="field_updates">Updates</label>
                     <input type="text" class="form-control" name="updates" id="field_updates"
-                           [(ngModel)]="factcheck.updates" />
+                           [(ngModel)]="factcheck.updates"/>
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.featuredMedia" for="field_featuredMedia">Featured Media</label>
+                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckFactcheck.featuredMedia"
+                           for="field_featuredMedia">Featured Media</label>
                     <button id="field_featuredMedia" class="btn btn-primary jh-create-entity create-media"
                             [routerLink]="['/', { outlets: { popup: 'featured-media/upload'} }]"
                             [queryParams]="{ media_type: 'feature'}"
                             replaceUrl="true" type="button">
                         <fa-icon [icon]="'plus'"></fa-icon>
-                        <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
+                        <span class="hidden-sm-down" jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
                             Upload Media
                         </span>
                     </button>
@@ -86,50 +96,69 @@
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.tag" for="field_tag">Tag</label>
                     <select class="form-control" id="field_tag" multiple name="tag" [(ngModel)]="factcheck.tags">
-                        <option [ngValue]="getSelected(factcheck.tags, tagOption)" *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.name}}</option>
+                        <option [ngValue]="getSelected(factcheck.tags, tagOption)"
+                                *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.name}}
+                        </option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.category" for="field_category">Category</label>
-                    <select class="form-control" id="field_category" multiple name="category" [(ngModel)]="factcheck.categories">
-                        <option [ngValue]="getSelected(factcheck.categories, categoryOption)" *ngFor="let categoryOption of categories; trackBy: trackCategoryById">{{categoryOption.name}}</option>
+                    <select class="form-control" id="field_category" multiple name="category"
+                            [(ngModel)]="factcheck.categories">
+                        <option [ngValue]="getSelected(factcheck.categories, categoryOption)"
+                                *ngFor="let categoryOption of categories; trackBy: trackCategoryById">
+                            {{categoryOption.name}}
+                        </option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.degaUser" for="field_degaUser">Author</label>
-                    <select class="form-control" id="field_degaUser" multiple name="degaUser" [(ngModel)]="factcheck.degaUsers" required>
-                        <option [ngValue]="getSelected(factcheck.degaUsers, degaUserOption)" *ngFor="let degaUserOption of degausers; trackBy: trackDegaUserById">{{degaUserOption.displayName}}</option>
+                    <select class="form-control" id="field_degaUser" multiple name="degaUser"
+                            [(ngModel)]="factcheck.degaUsers" required>
+                        <option [ngValue]="getSelected(factcheck.degaUsers, degaUserOption)"
+                                *ngFor="let degaUserOption of degausers; trackBy: trackDegaUserById">
+                            {{degaUserOption.displayName}}
+                        </option>
                     </select>
                 </div>
                 <div [hidden]="!(editForm.controls.degaUser?.dirty && editForm.controls.degaUser?.invalid)">
                     <small class="form-text text-danger"
-                           [hidden]="!editForm.controls.degaUser?.errors?.required" jhiTranslate="entity.validation.required">
+                           [hidden]="!editForm.controls.degaUser?.errors?.required"
+                           jhiTranslate="entity.validation.required">
                         This field is required.
                     </small>
                 </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.factcheckFactcheck.claim" for="field_claim">Claim</label>
-                    <select class="form-control" id="field_claim" multiple name="claim" [(ngModel)]="factcheck.claims">
-                        <option [ngValue]="getSelected(factcheck.claims, claimOption)" *ngFor="let claimOption of claims; trackBy: trackClaimById">{{claimOption.claim}}</option>
-                    </select>
+                    <br>
+                    <jhi-multiple-checkbox id="field_claim"
+                                           [option_list]="all_claim_options"
+                                           [selected_options]="selected_claim_options"
+
+                                           (updated_selection)="update_claim_selection($event)">
+
+                    </jhi-multiple-checkbox>
+
                 </div>
 
-                <jhi-multiple-checkbox [option_list]="all_claim_options"
-                                       [selected_options]="selected_claim_options"
-                                       (updated_selection)="update_claim_selection($event)">
-                </jhi-multiple-checkbox>
                 <div class="pad-up-bottom">
-                    <button type="button" id="add-pop-claim" class="btn btn-success" (click)="openDialogPopUp()">Add a Popup Claim</button>
+                    <button type="button" id="add-pop-claim" class="btn btn-success" (click)="openDialogPopUp()">Add a
+                        Popup Claim
+                    </button>
                 </div>
                 <div>
-                    <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
+                    <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
                         <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                     </button>
-                    <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary" *ngIf="showSave">
-                        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.savedraft">Save Draft</span>
+                    <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving"
+                            class="btn btn-primary" *ngIf="showSave">
+                        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span
+                        jhiTranslate="entity.action.savedraft">Save Draft</span>
                     </button>
-                    <button type="button" id="publish-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary" *ngIf="showPublish" (click)="saveOrPublish('Publish')">
-                        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.publish">Publish</span>
+                    <button type="button" id="publish-entity" [disabled]="editForm.form.invalid || isSaving"
+                            class="btn btn-primary" *ngIf="showPublish" (click)="saveOrPublish('Publish')">
+                        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span
+                        jhiTranslate="entity.action.publish">Publish</span>
                     </button>
                 </div>
             </div>
