working code for multiple select

--- a/src/main/webapp/app/shared/multiple-checkbox/multiple-checkbox.component.html
+++ b/src/main/webapp/app/shared/multiple-checkbox/multiple-checkbox.component.html
@@ -3,6 +3,7 @@
               [value]="option_details.id"
               (change)="checkbox_change_operation($event)"
               [labelPosition]="labelPosition">
-    {{option_details.name}}
+    {{option_details.display_text}}
 </mat-checkbox>
+    <br>
 </span>
