--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -95,38 +95,33 @@
 
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.tag" for="field_tag">Tag</label>
-                    <select class="form-control" id="field_tag" multiple name="tag" [(ngModel)]="factcheck.tags">
-                        <option [ngValue]="getSelected(factcheck.tags, tagOption)"
-                                *ngFor="let tagOption of tags; trackBy: trackTagById">{{tagOption.name}}
-                        </option>
-                    </select>
+                    <br>
+                    <jhi-multiple-checkbox id="field_tag"
+                                           [option_list]="all_tag_options"
+                                           [selected_options]="selected_tag_options"
+                                           (updated_selection)="update_tag_selection($event)">
+
+                    </jhi-multiple-checkbox>
                 </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.category" for="field_category">Category</label>
-                    <select class="form-control" id="field_category" multiple name="category"
-                            [(ngModel)]="factcheck.categories">
-                        <option [ngValue]="getSelected(factcheck.categories, categoryOption)"
-                                *ngFor="let categoryOption of categories; trackBy: trackCategoryById">
-                            {{categoryOption.name}}
-                        </option>
-                    </select>
+                    <br>
+                    <jhi-multiple-checkbox id="field_category"
+                                           [option_list]="all_category_options"
+                                           [selected_options]="selected_category_options"
+                                           (updated_selection)="update_category_selection($event)">
+
+                    </jhi-multiple-checkbox>
                 </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.degaUser" for="field_degaUser">Author</label>
-                    <select class="form-control" id="field_degaUser" multiple name="degaUser"
-                            [(ngModel)]="factcheck.degaUsers" required>
-                        <option [ngValue]="getSelected(factcheck.degaUsers, degaUserOption)"
-                                *ngFor="let degaUserOption of degausers; trackBy: trackDegaUserById">
-                            {{degaUserOption.displayName}}
-                        </option>
-                    </select>
-                </div>
-                <div [hidden]="!(editForm.controls.degaUser?.dirty && editForm.controls.degaUser?.invalid)">
-                    <small class="form-text text-danger"
-                           [hidden]="!editForm.controls.degaUser?.errors?.required"
-                           jhiTranslate="entity.validation.required">
-                        This field is required.
-                    </small>
+                    <br>
+                    <jhi-multiple-checkbox id="field_degaUser"
+                                           [option_list]="all_author_options"
+                                           [selected_options]="selected_author_options"
+                                           (updated_selection)="update_author_selection($event)">
+
+                    </jhi-multiple-checkbox>
                 </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.factcheckFactcheck.claim" for="field_claim">Claim</label>
@@ -134,11 +129,9 @@
                     <jhi-multiple-checkbox id="field_claim"
                                            [option_list]="all_claim_options"
                                            [selected_options]="selected_claim_options"
-
                                            (updated_selection)="update_claim_selection($event)">
 
                     </jhi-multiple-checkbox>
-
                 </div>
 
                 <div class="pad-up-bottom">
