--- a/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
@@ -40,9 +40,6 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <!-- <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.iconURL" for="field_iconURL">Icon URL</label>
-                     <input type="text" class="form-control" name="iconURL" id="field_iconURL"
-                         [(ngModel)]="rating.iconURL" />-->
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.iconURL" for="field_featuredMedia">Icon URL</label>
                     <button id="field_iconURL" class="btn btn-primary jh-create-entity create-media"
                             [routerLink]="['/', { outlets: { popup: 'featured-media/upload'} }]"
@@ -58,12 +55,12 @@
                         <span [(ngModel)]="rating.iconURL" name="iconURL" ngDefaultControl></span>
                     </div>
                 </div>
-                <div class="form-group" *ngIf="showClientId">
+                <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.isDefault" for="field_isDefault">Is Default</label>
                     <input type="checkbox" class="form-control" name="isDefault" id="field_isDefault"
                         [(ngModel)]="rating.isDefault" />
                 </div>
-               <div class="form-group" *ngIf="showClientId">
+               <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.clientId" for="field_clientId">Client Id</label>
                     <input type="text" class="form-control" name="clientId" id="field_clientId"
                         [(ngModel)]="rating.clientId" required/>
@@ -74,51 +71,6 @@
                         </small>
                     </div>
                 </div>
-                <!-- <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.slug" for="field_slug">Slug</label>
-                    <input type="text" class="form-control" name="slug" id="field_slug"
-                        [(ngModel)]="rating.slug" required/>
-                    <div [hidden]="!(editForm.controls.slug?.dirty && editForm.controls.slug?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.slug?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.createdDate" for="field_createdDate">Created Date</label>
-                    <div class="d-flex">
-                        <input id="field_createdDate" type="datetime-local" class="form-control" name="createdDate" [(ngModel)]="createdDate"
-                        required/>
-                    </div>
-                    <div [hidden]="!(editForm.controls.createdDate?.dirty && editForm.controls.createdDate?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.createdDate?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
-                        <small class="form-text text-danger"
-                            [hidden]="!editForm.controls.createdDate?.errors?.ZonedDateTimelocal" jhiTranslate="entity.validation.ZonedDateTimelocal">
-                            This field should be a date and time.
-                        </small>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.lastUpdatedDate" for="field_lastUpdatedDate">Last Updated Date</label>
-                    <div class="d-flex">
-                        <input id="field_lastUpdatedDate" type="datetime-local" class="form-control" name="lastUpdatedDate" [(ngModel)]="lastUpdatedDate"
-                        required/>
-                    </div>
-                    <div [hidden]="!(editForm.controls.lastUpdatedDate?.dirty && editForm.controls.lastUpdatedDate?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.lastUpdatedDate?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
-                        <small class="form-text text-danger"
-                            [hidden]="!editForm.controls.lastUpdatedDate?.errors?.ZonedDateTimelocal" jhiTranslate="entity.validation.ZonedDateTimelocal">
-                            This field should be a date and time.
-                        </small>
-                    </div>
-                </div>-->
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.factcheckRating.description" for="field_description">Description</label>
                     <span class="text-danger" [hidden]="rating.description">*</span>
