renaming of functions

--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -131,7 +131,7 @@
                     <button type="button" class="btn btn-success" (click)="searchCategoryCurrentPage=0;searchCategories()">
                         Search Category
                     </button>
-                    <button type="button" class="btn btn-success" (click)="getAllCategorys()">
+                    <button type="button" class="btn btn-success" (click)="getAllCategories()">
                         Reset
                     </button>
                     <br>
