--- a/src/main/webapp/app/entities/core/post/post-update.component.html
+++ b/src/main/webapp/app/entities/core/post/post-update.component.html
@@ -84,20 +84,60 @@
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.tag" for="field_tag">Tag</label>
                     <br>
+                    <input [(ngModel)]="searchTagKeyword" [ngModelOptions]="{standalone: true}">
+                    <button type="button" class="btn btn-success" (click)="searchTagCurrentPage=0;searchTags()">
+                        Search Tag
+                    </button>
+                    <button type="button" class="btn btn-success" (click)="getAllTags()">
+                        Reset
+                    </button>
+                    <br>
                     <jhi-multiple-checkbox id="field_tag"
                                            [option_list]="all_tag_options"
                                            [selected_options]="selected_tag_options"
                                            (updated_selection)="update_tag_selection($event)">
                     </jhi-multiple-checkbox>
+                    <button type="button"
+                            class="btn btn-success"
+                            (click)="searchTagCurrentPage=searchTagCurrentPage-1;searchTags()"
+                            *ngIf="searchTagCurrentPage>0">
+                        Previous
+                    </button>
+                    <button type="button"
+                            class="btn btn-success"
+                            (click)="searchTagCurrentPage=searchTagCurrentPage+1;searchTags()"
+                            *ngIf="searchTagTotalResult>((searchTagCurrentPage+1)*searchResultPerPage)">
+                        Next
+                    </button>
                 </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.category" for="field_category">Category</label>
+                    <br>
+                    <input [(ngModel)]="searchCategoryKeyword" [ngModelOptions]="{standalone: true}">
+                    <button type="button" class="btn btn-success" (click)="searchCategoryCurrentPage=0;searchCategories()">
+                        Search Category
+                    </button>
+                    <button type="button" class="btn btn-success" (click)="getAllCategories()">
+                        Reset
+                    </button>
                     <br>
                     <jhi-multiple-checkbox id="field_category"
                                            [option_list]="all_category_options"
                                            [selected_options]="selected_category_options"
                                            (updated_selection)="update_category_selection($event)">
                     </jhi-multiple-checkbox>
+                    <button type="button"
+                            class="btn btn-success"
+                            (click)="searchCategoryCurrentPage=searchCategoryCurrentPage-1;searchCategories()"
+                            *ngIf="searchCategoryCurrentPage>0">
+                        Previous
+                    </button>
+                    <button type="button"
+                            class="btn btn-success"
+                            (click)="searchCategoryCurrentPage=searchCategoryCurrentPage+1;searchCategories()"
+                            *ngIf="searchCategoryTotalResult>((searchCategoryCurrentPage+1)*searchResultPerPage)">
+                        Next
+                    </button>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.corePost.format" for="field_format">Format</label>
@@ -118,12 +158,32 @@
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.degaUser" for="field_degaUser">Author</label>
                     <br>
+                    <input [(ngModel)]="searchDegaUserKeyword" [ngModelOptions]="{standalone: true}">
+                    <button type="button" class="btn btn-success" (click)="searchDegaUserCurrentPage=0;searchDegaUsers()">
+                        Search DegaUser
+                    </button>
+                    <button type="button" class="btn btn-success" (click)="getAllDegaUsers()">
+                        Reset
+                    </button>
+                    <br>
                     <jhi-multiple-checkbox id="field_degaUser"
                                            [option_list]="all_author_options"
                                            [selected_options]="selected_author_options"
                                            (updated_selection)="update_author_selection($event)">
 
                     </jhi-multiple-checkbox>
+                    <button type="button"
+                            class="btn btn-success"
+                            (click)="searchDegaUserCurrentPage=searchDegaUserCurrentPage-1;searchDegaUsers()"
+                            *ngIf="searchDegaUserCurrentPage>0">
+                        Previous
+                    </button>
+                    <button type="button"
+                            class="btn btn-success"
+                            (click)="searchDegaUserCurrentPage=searchDegaUserCurrentPage+1;searchDegaUsers()"
+                            *ngIf="searchDegaUserTotalResult>((searchDegaUserCurrentPage+1)*searchResultPerPage)">
+                        Next
+                    </button>
                 </div>
             </div>
             <div>
