--- a/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -76,5 +76,8 @@ Logo styles
             /*background: url('../../../content/images/logo-jhipster-bak.png') no-repeat center center;*/
             background-size: contain;
         }
+        img {
+            height: 30px;
+        }
     }
 }
