--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -20,40 +20,152 @@
 				</a>
 				<ul class="nav-dropdown-items">
 					<li>
-						<a href="">
+						<a routerLink="post" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
-							<span>Post</span>
+							<span jhiTranslate="global.menu.entities.corePost">Post</span>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a routerLink="category" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
-							<span>Category</span>
+							<span jhiTranslate="global.menu.entities.coreCategory">Category</span>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a routerLink="format" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
-							<span>Format</span>
+							<span jhiTranslate="global.menu.entities.coreFormat">Format</span>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a routerLink="organization" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
-							<span>Organization</span>
+							<span jhiTranslate="global.menu.entities.coreOrganization">Organization</span>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a routerLink="status" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
-							<span>Status</span>
+							<span jhiTranslate="global.menu.entities.coreStatus">Status</span>
 						</a>
 					</li>
+                    <li>
+                        <a routerLink="tag" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.coreTag">Tag</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="media" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.coreMedia">Media</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="dega-user" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.coreDegaUser">Dega User</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLinkActive="active" routerLink="role" [routerLinkActiveOptions]="{ exact: true }">
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.coreRole">Role</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="rating" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.factcheckRating">Rating</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="claim" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.factcheckClaim">Claim</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="claimant" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.factcheckClaimant">Claimant</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="factcheck" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" >
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.factcheckFactcheck">Factcheck</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="role-mapping" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <fa-icon [icon]="'asterisk'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.coreRoleMapping">Role Mapping</span>
+                        </a>
+                    </li>
 				</ul>
 			</li>
+            <li class="nested-menu" [ngClass]="{'open': activeDropdown == 2}" (click)="toggleDropdown(2)">
+                <a href="javascript:void(0);">
+					<span>
+                        <fa-icon [icon]="'user-plus'"></fa-icon>
+                        <span jhiTranslate="global.menu.admin.main">Administration</span>
+                    </span>
+                </a>
+                <ul class="nav-dropdown-items">
+                    <li>
+                        <a routerLink="admin/gateway" routerLinkActive="active">
+                            <fa-icon [icon]="'road'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.admin.gateway">Gateway</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="admin/jhi-tracker" routerLinkActive="active">
+                            <fa-icon [icon]="'eye'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.admin.tracker">User tracker</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="admin/jhi-metrics" routerLinkActive="active">
+                            <fa-icon [icon]="'tachometer-alt'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.admin.metrics">Metrics</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="admin/jhi-health" routerLinkActive="active">
+                            <fa-icon [icon]="'heart'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.admin.configuration">Health</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="admin/jhi-configuration" routerLinkActive="active">
+                            <fa-icon [icon]="'list'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.admin.metrics">Configuration</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="admin/audits" routerLinkActive="active">
+                            <fa-icon [icon]="'bell'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.admin.audits">Audits</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="admin/logs" routerLinkActive="active">
+                            <fa-icon [icon]="'tasks'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.admin.logs">Logs</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="admin/docs" routerLinkActive="active">
+                            <fa-icon [icon]="'book'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.admin.apidocs">API</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
 		</ul>
 	</nav>
 	<div class="side-bar-minimizer-wrap" (click)="stickMenu()">
-        <button class="side-bar-minimizer" [ngClass]="{'sticky': toggleSticky}"></button>   
+        <button class="side-bar-minimizer" [ngClass]="{'sticky': toggleSticky}"></button>
     </div>
 </div>
