--- a/src/main/webapp/app/layouts/sidebar/sidebar.scss
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.scss
@@ -1,6 +1,8 @@
 .side-bar-wrap {
+    height: 100%;
     &.sticky {
         nav {
+            overflow-y: unset;
             ul {
                 li {
                     width: 50px;
@@ -18,6 +20,7 @@
                         max-height: 1500px;
                         li {
                             width: 200px;
+                            background: rgba(0, 0, 0, 0.2);
                         }
                     }
                     > a:after {
@@ -28,6 +31,8 @@
         }
     }
     nav {
+        height: calc(100% - 50px);
+        overflow-y: scroll;
         ul {
             padding: 0px;
             li {
